# src/openapi/models/BatchQueryReq.ts
@@ -1,9 +1,0 @@
-/* istanbul ignore file */
-/* tslint:disable */
-/* eslint-disable */
-
-export type BatchQueryReq = {
-    limit: number;
-    cursor?: number | null;
-};
-
