# src/openapi/models/Worker.ts
@@ -8,6 +8,9 @@ import type { WorkerStatus } from './WorkerStatus';
 export type Worker = {
     uuid: string;
     status: WorkerStatus;
+    last_heart_beat?: string;
+    start_time?: string;
+    stop_time?: string;
     name?: string;
     tags?: Array<Tag>;
 };
